Fix footer positioning, nav overflow, about gutters, and detail mobile layout

--- a/about.css
+++ b/about.css
@@ -211,8 +211,6 @@ body {
   .about {
     padding-top: 64px;
     padding-bottom: 64px;
-    padding-left: 0;
-    padding-right: 0;
   }
 
   .about__title {
@@ -226,8 +224,6 @@ body {
     row-gap: 32px;
     padding-top: 48px;
     padding-bottom: 48px;
-    padding-left: 0;
-    padding-right: 0;
   }
 
   .about__title {
